login page responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="row main-row">
                 
                 <!-- 3d-image -->
-                <img src="assets/images/3D.png" alt="" class="d-img img-fluid position-fixed bottom-0">
+                <img src="assets/images/3D.png" alt="" class="d-img1 img-fluid position-fixed bottom-0">
 
                 <!-- logo and headings -->
                 <div class="col-md-3 side-heading">
@@ -29,7 +29,9 @@
                 <div class="col-md-9 bg-white rounded-start-5 d-flex justify-content-center align-items-center flex-column min-vh-100 second-col">
 
                     <!-- 3d-image -->
-                    <img src="assets/images/login-page-img.png"  class="d-img position-absolute top-0 end-0" alt="3d image">
+                    <img src="assets/images/login-page-img.png"  class="d-img2 position-absolute top-0 end-0" alt="3d image">
+
+                    <img src="assets/images/logo.png" alt="" class="mob-logo">
                     <div class="formText my-auto">
                         <h2 class="fw-semibold">Welcome Back!</h2>
                         <h6 class="lh-base">Log In To Your Account To Continue Your Creative Journey. We're <br>Excited To Have You Back!</h6>
