--- a/upload-image.html
+++ b/upload-image.html
@@ -18,7 +18,7 @@
     <nav class="navbar w-100 fixed-top bg-white">
       <div class="container nav-content">
         <a class="navbar-brand flex-grow-1 logo-img" href="#">
-          <img src="assets/images/request-access/logo-rq.png" alt="Logo" class="d-inline-block align-text-top">
+          <img src="assets/images/logo-rq.png" alt="Logo" class="d-inline-block align-text-top">
         </a>
         <h5 class="nav-text fw-semibold text-end m-0 lh-1">
           Hi, John<br><span class="h6"><strong>Billing Period:</strong> 10 Days Remain</span>
@@ -46,27 +46,34 @@
   <section>
       <div class="container">
         <div class="d-flex justify-content-start align-items-center flex-column min-vh-100">
-            <div class="headText text-center w-100 d-flex align-items-center"> 
-                <!-- back button -->
-                <div class="back-btn text-start mb-3"><a href="selection-page.html" class="text-decoration-none text-black"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path d="M16.6665 9.375C16.8323 9.375 16.9912 9.44085 17.1084 9.55806C17.2257 9.67527 17.2915 9.83424 17.2915 10C17.2915 10.1658 17.2257 10.3247 17.1084 10.4419C16.9912 10.5592 16.8323 10.625 16.6665 10.625H8.95817V15C8.95806 15.1235 8.92135 15.2443 8.85266 15.3469C8.78398 15.4496 8.68641 15.5296 8.57227 15.5769C8.45814 15.6242 8.33256 15.6365 8.21139 15.6125C8.09022 15.5884 7.97891 15.529 7.8915 15.4417L2.8915 10.4417C2.77446 10.3245 2.70872 10.1656 2.70872 10C2.70872 9.83437 2.77446 9.67552 2.8915 9.55833L7.8915 4.55833C7.97891 4.47104 8.09022 4.4116 8.21139 4.38753C8.33256 4.36346 8.45814 4.37583 8.57227 4.42309C8.68641 4.47035 8.78398 4.55038 8.85266 4.65306C8.92135 4.75574 8.95806 4.87647 8.95817 5V9.375H16.6665Z" fill="black"/>
-                  </svg><span class="back-btn-text">Back</span></a>
-                </div>   
-                <h2 class="fw-semibold mx-auto mb-0">Upload Your Images</h2> 
-
+            <div class="row w-100">
+              <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="headText text-center  d-flex align-items-center"> 
+                  <!-- back button -->
+                  <div class="back-btn text-start mb-3"><a href="selection-page.html" class="text-decoration-none text-black"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                      <path d="M16.6665 9.375C16.8323 9.375 16.9912 9.44085 17.1084 9.55806C17.2257 9.67527 17.2915 9.83424 17.2915 10C17.2915 10.1658 17.2257 10.3247 17.1084 10.4419C16.9912 10.5592 16.8323 10.625 16.6665 10.625H8.95817V15C8.95806 15.1235 8.92135 15.2443 8.85266 15.3469C8.78398 15.4496 8.68641 15.5296 8.57227 15.5769C8.45814 15.6242 8.33256 15.6365 8.21139 15.6125C8.09022 15.5884 7.97891 15.529 7.8915 15.4417L2.8915 10.4417C2.77446 10.3245 2.70872 10.1656 2.70872 10C2.70872 9.83437 2.77446 9.67552 2.8915 9.55833L7.8915 4.55833C7.97891 4.47104 8.09022 4.4116 8.21139 4.38753C8.33256 4.36346 8.45814 4.37583 8.57227 4.42309C8.68641 4.47035 8.78398 4.55038 8.85266 4.65306C8.92135 4.75574 8.95806 4.87647 8.95817 5V9.375H16.6665Z" fill="black"/>
+                    </svg><span class="back-btn-text">Back</span></a>
+                  </div>   
+                  <h2 class="fw-semibold mx-auto mb-0">Upload Your Images</h2> 
+                </div>
+              </div>
             </div>
 
-            <div class="selected-option w-100">
-                <span>Social Media <svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7501 10.5001C13.7501 13.2218 8.5501 16.4343 7.5076 17.0501C7.11177 17.2851 6.60093 17.1534 6.36677 16.7576C6.13093 16.3609 6.26427 15.8501 6.65927 15.6168C8.84677 14.3209 12.0834 11.8001 12.0834 10.5001C12.0834 9.19844 8.84677 6.6776 6.65927 5.38344C6.26427 5.14927 6.13093 4.63677 6.36677 4.24261C6.6001 3.84677 7.11093 3.7151 7.5076 3.9501C8.5501 4.56594 13.7501 7.77844 13.7501 10.5001Z" fill="#333333"/>
-                  </svg> Instagram <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="me-0">
-                    <path opacity="0.16" d="M5.20829 16.6667L4.16663 20.8333L8.33329 19.7917L18.75 9.375L15.625 6.25L5.20829 16.6667Z" fill="#001F3F"/>
-                    <path d="M15.625 6.25L18.75 9.375M13.5416 20.8333H21.875M5.20829 16.6667L4.16663 20.8333L8.33329 19.7917L20.402 7.72292C20.7926 7.33223 21.012 6.80243 21.012 6.25C21.012 5.69758 20.7926 5.16777 20.402 4.77708L20.2229 4.59792C19.8322 4.20735 19.3024 3.98795 18.75 3.98795C18.1975 3.98795 17.6677 4.20735 17.277 4.59792L5.20829 16.6667Z" stroke="#001F3F" stroke-width="2.08333" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg></span>
+            <div class="row w-100">
+              <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="selected-option w-100">
+                  <span>Social Media <svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7501 10.5001C13.7501 13.2218 8.5501 16.4343 7.5076 17.0501C7.11177 17.2851 6.60093 17.1534 6.36677 16.7576C6.13093 16.3609 6.26427 15.8501 6.65927 15.6168C8.84677 14.3209 12.0834 11.8001 12.0834 10.5001C12.0834 9.19844 8.84677 6.6776 6.65927 5.38344C6.26427 5.14927 6.13093 4.63677 6.36677 4.24261C6.6001 3.84677 7.11093 3.7151 7.5076 3.9501C8.5501 4.56594 13.7501 7.77844 13.7501 10.5001Z" fill="#333333"/>
+                    </svg> Instagram <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="me-0">
+                      <path opacity="0.16" d="M5.20829 16.6667L4.16663 20.8333L8.33329 19.7917L18.75 9.375L15.625 6.25L5.20829 16.6667Z" fill="#001F3F"/>
+                      <path d="M15.625 6.25L18.75 9.375M13.5416 20.8333H21.875M5.20829 16.6667L4.16663 20.8333L8.33329 19.7917L20.402 7.72292C20.7926 7.33223 21.012 6.80243 21.012 6.25C21.012 5.69758 20.7926 5.16777 20.402 4.77708L20.2229 4.59792C19.8322 4.20735 19.3024 3.98795 18.75 3.98795C18.1975 3.98795 17.6677 4.20735 17.277 4.59792L5.20829 16.6667Z" stroke="#001F3F" stroke-width="2.08333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg></span>
+              </div>
+              </div>
             </div>
 
             <div class="row w-100 ">
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 d-flex flex-column custom-pd1">
+                <div class="col-sm-12 col-md-12 col-lg-6 d-flex flex-column custom-pd1">
                     <div class="upload-area d-flex flex-column justify-content-center align-items-center  rounded custom-border">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
                             <path d="M8.43753 20.625C3.40641e-05 21.5625 0.937534 11.25 8.43753 12.1875C5.62503 1.875 21.5625 1.875 20.625 9.375C30 6.5625 30 21.5625 21.5625 20.625M10.3125 16.875L15 13.125M15 13.125L19.6875 16.875M15 13.125V27.1875" stroke="#9D9D9D" stroke-width="1.875" stroke-linecap="round" stroke-linejoin="round"/>
@@ -87,7 +94,7 @@
                     <button type="button" class="btn btn-primary submit-btn align-self-center fw-semibold my-4" onclick="navigateTo('preview.html')">Submit</button>
 
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 custom-pd2">
+                <div class="col-sm-12 col-md-12 col-lg-6 custom-pd2">
                     <div class="table-responsive">
                       <table class="table  text-center text-black fw-semibold spec-table rounded">
                         <thead>
