dynamic dropdown and minor text change

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="col-md-3 side-heading">
                     <div class="login-heading">
                         <img src="assets/images/logo.png" alt="" class="logo-fix">
-                        <h5 class="mt-5 text-white font-weight-normal">Transform Your Product Imagery<br>with Precision Mockups</h5>
+                        <h5 class="mt-5 text-white font-weight-normal">Improve Your <br>Product Imagery and Ads <br>with Precision Mockups.</h5>
                     </div>
                 </div>
 
@@ -48,7 +48,7 @@
                               <input type="password" class="form-control px-0" id="exampleInputPassword1" placeholder="Password">
                             </div>
             
-                            <button type="button" class="btn btn-primary login-btn fw-semibold" onclick="navigateTo('selection-page.html')">Login</button>
+                            <a type="button" class="btn btn-primary login-btn fw-semibold" href="selection-page.html">Login</a>
                             <div class="forget"><a href="forget-pass.html" id="ForgetPassword">Forget Password?</a></div>
 
                             <div class="access-page"><h6>Don’t Have An Account? </h6><a href="request-access.html">Request For Access</a></div>
