--- a/selection-page.html
+++ b/selection-page.html
@@ -113,9 +113,9 @@
     <script>
       $(document).ready(function() {
       $(".all-itm").hide();
-      $("#social").click(function () { $("#social-1").show(); $("#social-2").show(); $("#retail-1").hide(); $("#retail-2").hide(); $("#retail-3").hide(); $("#publisher-1").hide(); $("#publisher-2").hide(); $("#publisher-3").hide(); $("#txt-change").text("Social Media");});
-      $("#retailer").click(function () {  $("#social-1").hide(); $("#social-2").hide(); $("#retail-1").show(); $("#retail-2").show(); $("#retail-3").show(); $("#publisher-1").hide(); $("#publisher-2").hide(); $("#publisher-3").hide(); $("#txt-change").text("Retailer");});
-      $("#publisher").click(function () {  $("#social-1").hide(); $("#social-2").hide(); $("#retail-1").hide(); $("#retail-2").hide(); $("#retail-3").hide(); $("#publisher-1").show(); $("#publisher-2").show(); $("#publisher-3").show(); $("#txt-change").text("Publisher");});
+      $("#social").click(function () { $("#social-1").show(); $("#social-2").show(); $("#retail-1").hide(); $("#retail-2").hide(); $("#retail-3").hide(); $("#publisher-1").hide(); $("#publisher-2").hide(); $("#publisher-3").hide(); $("#txt-change").text("Social Media"); $("#txt-change-2").text("Specific Site");});
+      $("#retailer").click(function () {  $("#social-1").hide(); $("#social-2").hide(); $("#retail-1").show(); $("#retail-2").show(); $("#retail-3").show(); $("#publisher-1").hide(); $("#publisher-2").hide(); $("#publisher-3").hide(); $("#txt-change").text("Retailer"); $("#txt-change-2").text("Specific Site");});
+      $("#publisher").click(function () {  $("#social-1").hide(); $("#social-2").hide(); $("#retail-1").hide(); $("#retail-2").hide(); $("#retail-3").hide(); $("#publisher-1").show(); $("#publisher-2").show(); $("#publisher-3").show(); $("#txt-change").text("Publisher"); $("#txt-change-2").text("Specific Site");});
 
       // second dropdown
       $("#social-1").click(function () { $("#txt-change-2").text("Instagram");})
