--- a/upload-image.html
+++ b/upload-image.html
@@ -81,7 +81,7 @@
                       <div class="dz-message needsclick">
                           <i class="h1 text-muted dripicons-cloud-upload"></i>
                           <p>Drag Or Upload Your Image/Video Here</p>
-                          <button type="button" class="btn btn-outline-dark fw-semibold">Browse File</button>
+                          <button type="button" class="btn btn-outline-dark fw-semibold browse-btn">Browse File</button>
                       </div>
                     </form>
                     <p>Image should not bigger than 30MB & Video should not Bigger that 1GB</p>
@@ -91,13 +91,30 @@
                     <div class="d-none" id="uploadPreviewTemplate">
                       <div class="card mt-1 mb-0  d-flex position-relative">
                             <img data-dz-thumbnail src="#" class="avatar-sm rounded bg-light" alt="" style="object-fit: contain;">  
-                            <a href="" class=" btn-link btn-lg position-absolute" data-dz-remove>
+                            <a href="" class=" btn-link btn-lg position-absolute" data-bs-toggle="modal" data-bs-target="#exampleModal"  >
                                 <img src="assets/images/cross.svg" alt="" height="20px" width="20px">
-                            </a>       
+                            </a>    
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                              <div class="modal-dialog modal-dialog-centered">
+                                  <div class="modal-content modal-cont border-0">
+                                      <div class="modal-header border-bottom-0 p-0 justify-content-center">
+                                          <h4 class="modal-title m-0 fw-semibold" id="exampleModalLabel">Confirm Deletion</h4>
+                                      </div>
+                                      <div class="modal-body p-0 align-self-center">Are you sure you want to delete this image/video?</div>
+                                      <div class="modal-footer justify-content-center border-top-0 p-0">
+                                          <button type="button" id="confirm-yes" class="btn btn-secondary okay-btn m-0 fw-semibold" data-dz-remove data-bs-dismiss="modal">Yes</button>
+                                          <button type="button" id="confirm-no" class="btn btn-outline-primary no-btn m-0 fw-semibold" data-bs-dismiss="modal">No</button>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>   
                       </div>
                     </div>
                   </div>
                   <button type="button" class="btn btn-primary submit-btn align-self-center fw-semibold my-4" onclick="navigateTo('preview.html')">Submit</button>
+
+                  
 
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6 custom-pd2">
